--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
           poetry install
       - name: Lint
         run: |
-          poetry run pylint pedroai
+          poetry run pylint -E pedroai
           poetry run black --check
       - name: Test with pytest
         run: |
