Fix bug, add mypy

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,9 +28,11 @@ jobs:
           pip install poetry
           poetry install
       - name: Lint
-        run: |
-          poetry run pylint -E pedroai
-          poetry run black --check
+        run: poetry run pylint -E pedroai
+      - name: Code Format
+        run: poetry run black --check
+      - name: MyPy Type Check
+        run: poetry run mypy
       - name: Test with pytest
         run: |
           poetry run pytest
