--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,11 +28,13 @@ jobs:
           pip install poetry
           poetry install
       - name: Lint
-        run: poetry run pylint -E pedroai
+        run: poetry run pylint pedroai
       - name: Code Format
         run: poetry run black --check .
       - name: MyPy Type Check
-        run: poetry run mypy .
-      - name: Test with pytest
         run: |
-          poetry run pytest
+          pwd
+          ls
+          poetry run mypy .
+      - name: Test with pytest
+        run: poetry run pytest
