--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.23.0"
 pytest = "^5.2"
 black = "^19.10b0"
 pylint = "^2.4.4"
+mypy = "^0.782"
 
 [build-system]
 requires = ["poetry>=0.12"]
