--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ pedroai = "pedroai.main:cli"
 
 [tool.isort]
 known_first_party = "pedroai"
+profile = "black"
+multi_line_output = 3
 
 [build-system]
 requires = ["poetry>=0.12"]
