--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ typer = "^0.3.2"
 toml = "^0.10.2"
 pydantic = "^1.7.3"
 rich = "^9.3.0"
+altair-saver = "^0.5.0"
+altair = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
