--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,23 @@ description = ""
 authors = ["Pedro Rodriguez <me@pedro.ai>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-plotnine = "^0.7"
-requests = "^2.23.0"
+python = "^3.8"
+plotnine = "^0.8"
+requests = "^2.27.1"
 pysimdjson = {extras = ["dev"], version = "^4.0.3"}
 typer = "^0.4.0"
 toml = "^0.10.2"
-pydantic = "^1.7.3"
-rich = "^10.15.2"
+pydantic = "^1.9.0"
+rich = "^12.4.1"
 altair-saver = "^0.5.0"
-altair = "^4.1.0"
+altair = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = "^19.10b0"
-pylint = "^2.4.4"
-mypy = "^0.782"
-isort = "^5.6.4"
+pytest = "^7.1.2"
+black = "^22.3.0"
+pylint = "^2.13.8"
+mypy = "^0.950"
+isort = "^5.10.1"
 
 [tool.poetry.scripts]
 pedroai = "pedroai.main:cli"
