--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ black = "^22.3.0"
 pylint = "^2.13.8"
 mypy = "^0.950"
 isort = "^5.10.1"
+types-requests = "^2.27.25"
+types-toml = "^0.10.7"
 
 [tool.poetry.scripts]
 pedroai = "pedroai.main:cli"
