--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,21 @@
 [tool.poetry]
 name = "pedroai"
-version = "0.3.0"
+version = "0.4.0"
 description = ""
 authors = ["Pedro Rodriguez <me@pedro.ai>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-plotnine = "^0.8"
+python = "^3.8, <3.12"
+plotnine = "^0.9"
 requests = "^2.27.1"
 pysimdjson = {extras = ["dev"], version = "^4.0.3"}
-typer = "^0.4.0"
+typer = "^0.6.1"
 toml = "^0.10.2"
 pydantic = "^1.9.0"
 rich = "^12.4.1"
 altair-saver = "^0.5.0"
 altair = "^4.2.0"
+scipy = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
